# canarynode

./: .gitignore
docs/: canarynode-bom.csv
docs/libraries/ul_BMI270/KiCADv6/: 2026-05-24_20-31-08.kicad_sym
docs/libraries/ul_BMI270/KiCADv6/footprints.pretty/: PhoenixMC_1x03_P3.5_DB2EVC.kicad_mod.kicad_mod
docs/libraries/ul_PESD2CANFD27V-TR/KiCADv6/: 2026-05-24_22-40-25.kicad_sym
docs/libraries/ul_PESD2CANFD27V-TR/KiCADv6/footprints.pretty/: SOT23_PESD2_NEX-L.kicad_mod  SOT23_PESD2_NEX-M.kicad_mod  SOT23_PESD2_NEX.kicad_mod
firmware/: CMakeLists.txt
firmware/cmake/: arm-none-eabi.cmake
firmware/linker/: stm32g474.ld
firmware/src/: main.c
firmware/startup/: startup_stm32g474.c
hardware/kicad/: #auto_saved_files#  DRC.rpt  ERC--5-23.rpt  canarynode-all.pos  canarynode-cpl.csv  canarynode.csv  canarynode.kicad_pcb  canarynode.kicad_prl  canarynode.kicad_pro  canarynode.kicad_sch  canarynode.kicad_sch-bak  canarynode.netlist.net  canarynode.plt  fp-lib-table  sym-lib-table  ~canarynode.kicad_sch.lck
hardware/kicad/gerbers/: canarynode-B_Mask.gbr  canarynode-B_Paste.gbr  canarynode-B_Silkscreen.gbr  canarynode-Edge_Cuts.gbr  canarynode-F_Mask.gbr  canarynode-F_Paste.gbr  canarynode-F_Silkscreen.gbr  canarynode-GND1.gbr  canarynode-GND2.gbr  canarynode-NPTH.drl  canarynode-PTH.drl  canarynode-SIG_BOTTOM.gbr  canarynode-SIG_TOP.gbr  canarynode-job.gbrjob
hardware/kicad/jlcpcb/: project.db
hardware/kicad/libraries/coilcraft/: IND_XFL3012_COC.kicad_mod
